--- a/project.ipynb
+++ b/project.ipynb
@@ -9,12 +9,18 @@
     "\n",
     "Este verano del 2023 viene siendo muy intenso para la mayoría de gente. He escuchado y leído por las redes sociales a muchas personas decir que este verano lo sienten como el más caluroso de los últimos años.\n",
     "\n",
-    "Sin embargo, me percaté de que cada año que pasa, la gente piensa esto mismo nuevamente. Por lo que me propuse buscar los datos históricos de las temperaturas medias de Buenos Aires y hacer un análisis.  \n",
+    "Sin embargo, me percaté de que cada año que pasa, la gente piensa esto mismo nuevamente. Por lo que me propuse buscar los datos históricos de las temperaturas medias de Buenos Aires y hacer un análisis para comprobar si realmente este año ha sido hasta ahora el verano con las mayores temperaturas medias de los ultimos años.  \n",
     "\n",
-    "Pude encontrar un dataset considerablemente completo, con un historial de temperaturas registradas provincia por provincia de Argentina en una web del gobierno en [este link](https://datos.gob.ar/dataset/smn-estadisticas-climaticas-normales). Pero desafortunadamente el registro llegaba hasta el año 2010 por lo que no me es de gran utilidad.\n",
+    "Pude encontrar un dataset considerablemente completo, con un historial de temperaturas registradas provincia por provincia de Argentina en una web del gobierno en [este link](https://datos.gob.ar/dataset/smn-estadisticas-climaticas-normales). Pero desafortunadamente el registro llegaba hasta el año 2010 por lo que no me fue de gran utilidad.\n",
     "\n",
-    "Luego encontré en una web de la Ciudad este dataset con las temperaturas máximas y mínimas medias de cada mes entre 1991 y 2023, el más actualizado hasta la actualidad. Por lo tanto, ante la imposibilidad de encontrar información suficiente sobre las temperaturas históricas de la provincia de Buenos Aires, me decidí por realizar el proyecto con el registro de CABA. [Fuente aquí](https://www.estadisticaciudad.gob.ar/eyc/?p=27702).\n",
-    "\n",
+    "Luego encontré en una web de la Ciudad este dataset con las temperaturas máximas y mínimas medias de cada mes entre 1991 y 2023, el más actualizado hasta la actualidad. Por lo tanto, ante la imposibilidad de encontrar información suficiente sobre las temperaturas históricas de la provincia de Buenos Aires, me decidí por realizar el proyecto con el registro de CABA. [Fuente aquí](https://www.estadisticaciudad.gob.ar/eyc/?p=27702)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c3b0b8d",
+   "metadata": {},
+   "source": [
     "## Data parsing\n",
     "\n",
     "Uso la biblioteca `xlrd` para leer archivos de Excel"
@@ -22,18 +28,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "2830b0b8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: xlrd in c:\\users\\nevil\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (2.0.1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install xlrd"
    ]
@@ -53,11 +51,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "ff506233",
+   "cell_type": "raw",
+   "id": "cb875b40",
    "metadata": {},
    "source": [
-    "Ahora inicializo un diccionario para tener la info de cada año. Me quedaré por ahora con los meses de Diciembre, Enero y Febrero, que tienden a ser los meses más calurosos del verano antes de que este acabe en Marzo, y asignaré las temperaturas máximas y mínimas medias en forma de lista de dos elementos (max,min). Como el verano abarca el fin de un mes y el principio de otro, para simplificar cuentas a un año le asignare su Enero y Febrero, y el Diciembre del mes anterior. Discriminaré el 1991 pues no tengo la info de su verano completa."
+    "Ahora inicializo un diccionario para tener la información necesaria de cada año. Me quedaré con los meses de Diciembre, Enero y Febrero, que tienden a ser los meses más calurosos del verano antes de que este acabe en Marzo, y asignaré las temperaturas máximas y mínimas medias en forma de lista de dos elementos (max,min). Como el verano abarca el fin de un año y el principio del que le sigue, para simplificar cuentas, a un año le asignare su Enero y Febrero, y el Diciembre del año anterior. Discriminaré el 1991 pues no tengo la info. de su verano completa."
    ]
   },
   {
@@ -78,7 +76,7 @@
    "id": "83198ed2",
    "metadata": {},
    "source": [
-    "A partir del año 2018 comenzaron a incluir la temperatura media de cada mes, pero no la tomaré. Primero lleno el datClima con los años 1991 - 2017, y  luego del 2018-2023. Las columnas con las temepraturas medias van de 2 a 54 y las filas de cada mes son 4,5 y 15"
+    "A partir del año 2018 comenzaron a incluir la temperatura media de cada mes, pero no la tomaré. Primero lleno el datClima con los años 1991 - 2017, y  luego del 2018-2023. Las columnas con las temperaturas medias van de 2 a 54 y las filas de cada mes son 4,5 y 15"
    ]
   },
   {
@@ -124,7 +122,9 @@
    "id": "9904851b",
    "metadata": {},
    "source": [
-    "## Analizo los datos obtenidos\n",
+    "## Data analysis\n",
+    "\n",
+    "### Temps extremas medias\n",
     "\n",
     "Ahora obtendré la media de las temperaturas máximas y mínimas medias de cada verano."
    ]
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d178f286",
+   "id": "d949b344",
    "metadata": {},
    "source": [
     "Las ordeno descendentemente para ver en el inicio de cada lista los años que me interesan."
@@ -188,7 +188,39 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5224f8e6",
+   "id": "613ec1d4",
+   "metadata": {},
+   "source": [
+    "### Variación porcentual reciente\n",
+    "\n",
+    "Me interesa también saber la variación porcentual de las medias del año 2023 respecto a años anteriores, para saber si realmente hay un porcentaje distinguible de aumento de temperaturas, lo que puede llevar a la gente a notar este cambio. Tomaré las medias de los ultimos 3 y 5 veranos pasados, para quedarme con los años que una persona puede recordar con mayor facilidad segun el calor \"sufrido\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "1253cc7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mediasMaximasUlt3 = 0;\n",
+    "mediasMaximasUlt5 = 0;\n",
+    "\n",
+    "for i in range(-4, -1):\n",
+    "    mediasMaximasUlt3 += tempsMediasDeVeranos[i][1][0]\n",
+    "    \n",
+    "for i in range(-6,-1):\n",
+    "    mediasMaximasUlt5 += tempsMediasDeVeranos[i][1][0]\n",
+    "    \n",
+    "mediasMaximasUlt3 = round(mediasMaximasUlt3/3, 1)\n",
+    "mediasMaximasUlt5 = round(mediasMaximasUlt5/5, 1)\n",
+    "\n",
+    "mediaMax2023 = tempsMediasDeVeranos[-1][1][0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3b6fab2",
    "metadata": {},
    "source": [
     "## Conclusión\n",
@@ -199,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "1f17777f",
+   "id": "7074b575",
    "metadata": {},
    "outputs": [
     {
@@ -221,11 +253,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a53c43e",
+   "cell_type": "markdown",
+   "id": "393b5d99",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Debajo, el top 5 de años con medias de temperaturas mínimas más altas registradas en los últimos 31 años:"
    ]
@@ -233,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "a69d850c",
+   "id": "74416673",
    "metadata": {},
    "outputs": [
     {
@@ -255,12 +285,40 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c303f85e",
+   "id": "157947cd",
+   "metadata": {},
+   "source": [
+    "¿Cuál ha sido la variación porcentual respecto a los últimos años de la media de temps máximas? Teniendo en cuenta que la del 2023 fue la mayor de todas, podemos simplemente calcular qué porcentaje ha aumetnado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "c3bb77a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La media de temperaturas maximas del 2023 fue 5.8% mayor que la de los últimos 3 años.\n",
+      "La media de temperaturas maximas del 2023 fue 5.4% mayor que la de los últimos 5 años.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"La media de temperaturas maximas del 2023 fue \" + str(round((mediaMax2023*100/mediasMaximasUlt3)-100, 1)) + \"% mayor que la de los últimos 3 años.\")\n",
+    "print (\"La media de temperaturas maximas del 2023 fue \" + str(round((mediaMax2023*100/mediasMaximasUlt5)-100, 1)) + \"% mayor que la de los últimos 5 años.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e563e7e8",
    "metadata": {},
    "source": [
     "Como se puede apreciar, las temperaturas máximas registradas en el verano 2022-2023 (es decir, Diciembre del 2022, y Enero y Febrero del 2023) dieron el promedio más alto de las últimas tres décadas, segun los datos registrados por el Servicio Meteorológico Nacional y el Observatorio Buenos Aires. Y además, si tomamos las temperaturas mínimas de cada verano, el verano 2022-2023 tuvo el segundo (o tercero) promedio más alto de las últimas tres décadas.  \n",
     "\n",
-    "Por lo tanto, se podría decir que, efectivamente, este verano ha sido el más caluroso de las últimas tres décadas, tomando en cuenta el promedio de los pícos de temperaturas máximas registradas en los meses de Dic-Ene-Feb. Y asimismo, podría decirse que este verano ha sido el seguno \"menos frío\" de las últimas tres décadas, tomando en cuenta los promedios de temperaturas mínimas."
+    "Por lo tanto, se podría decir que, efectivamente, este verano ha sido el más caluroso de las últimas tres décadas, tomando en cuenta el promedio de los pícos de temperaturas máximas registradas en los meses de Dic-Ene-Feb. Y asimismo, podría decirse que este verano ha sido el seguno \"menos frío\" de las últimas tres décadas, tomando en cuenta los promedios de temperaturas mínimas. Además, volviendo al asunto por el que me propuse iniciar este proyecto, el aumento porcentual de temperaturas "
    ]
   }
  ],
