--- a/project.ipynb
+++ b/project.ipynb
@@ -18,12 +18,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c3b0b8d",
+   "id": "5f085562",
    "metadata": {},
    "source": [
     "## Data parsing\n",
     "\n",
-    "Uso la biblioteca `xlrd` para leer archivos de Excel"
+    "Uso la biblioteca `xlrd` para leer archivos de Excel en Python"
    ]
   },
   {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "cb875b40",
+   "id": "e08a632f",
    "metadata": {},
    "source": [
     "Ahora inicializo un diccionario para tener la información necesaria de cada año. Me quedaré con los meses de Diciembre, Enero y Febrero, que tienden a ser los meses más calurosos del verano antes de que este acabe en Marzo, y asignaré las temperaturas máximas y mínimas medias en forma de lista de dos elementos (max,min). Como el verano abarca el fin de un año y el principio del que le sigue, para simplificar cuentas, a un año le asignare su Enero y Febrero, y el Diciembre del año anterior. Discriminaré el 1991 pues no tengo la info. de su verano completa."
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "613ec1d4",
+   "id": "1dcdcbd9",
    "metadata": {},
    "source": [
     "### Variación porcentual reciente\n",
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "1253cc7a",
+   "id": "fbb58ea8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "393b5d99",
+   "id": "6c47c6df",
    "metadata": {},
    "source": [
     "Debajo, el top 5 de años con medias de temperaturas mínimas más altas registradas en los últimos 31 años:"
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "157947cd",
+   "id": "6d7332e1",
    "metadata": {},
    "source": [
     "¿Cuál ha sido la variación porcentual respecto a los últimos años de la media de temps máximas? Teniendo en cuenta que la del 2023 fue la mayor de todas, podemos simplemente calcular qué porcentaje ha aumetnado"
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "c3bb77a3",
+   "id": "1f484384",
    "metadata": {},
    "outputs": [
     {
@@ -318,8 +318,16 @@
    "source": [
     "Como se puede apreciar, las temperaturas máximas registradas en el verano 2022-2023 (es decir, Diciembre del 2022, y Enero y Febrero del 2023) dieron el promedio más alto de las últimas tres décadas, segun los datos registrados por el Servicio Meteorológico Nacional y el Observatorio Buenos Aires. Y además, si tomamos las temperaturas mínimas de cada verano, el verano 2022-2023 tuvo el segundo (o tercero) promedio más alto de las últimas tres décadas.  \n",
     "\n",
-    "Por lo tanto, se podría decir que, efectivamente, este verano ha sido el más caluroso de las últimas tres décadas, tomando en cuenta el promedio de los pícos de temperaturas máximas registradas en los meses de Dic-Ene-Feb. Y asimismo, podría decirse que este verano ha sido el seguno \"menos frío\" de las últimas tres décadas, tomando en cuenta los promedios de temperaturas mínimas. Además, volviendo al asunto por el que me propuse iniciar este proyecto, el aumento porcentual de temperaturas "
+    "Por lo tanto, se podría decir que, efectivamente, este verano ha sido el más caluroso de las últimas tres décadas, tomando en cuenta el promedio de los pícos de temperaturas máximas registradas en los meses de Dic-Ene-Feb. Y asimismo, podría decirse que este verano ha sido el seguno \"menos frío\" de las últimas tres décadas, tomando en cuenta los promedios de temperaturas mínimas. Además, volviendo al asunto por el que me propuse iniciar este proyecto, el aumento porcentual de temperaturas es de entre un 5% y 6% respecto a los últimos 5 y 3 veranos pasados, porcentajes considerablemente perceptible."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fa5398d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
